--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -3,25 +3,25 @@
 // The color palette
 $palette: (
 	light: (
-		1: #ECEDED,
-		2: #9CA9B3,
-		3: #717D86
+		1: #D8E2DC,
+		2: #E8E8E4,
+		3: #E9EDC9
 	),
 	dark: (
-		1: #151719,
-		2: #25282C,
+		1: #433633,
+		2: #524632,
 		3: #33363A
 	),
 	primary: (
-		1: #6163FF,
-		2: #ACADFF,
-		3: #5658DD,
-		4: #E9E9FF
+		1: #CB997E,
+		2: #DDBEA9,
+		3: #A5A58D,
+		4: #B7B7A4
  	),
 	secondary: (
-		1: #24E5AF,
-		2: #73EFCC,
-		3: #1CB68B,
+		1: #DFE7FD,
+		2: #EAE4E9,
+		3: #CDDAFD,
 		4: #D2F9EE
 	),
 	alert: (
