--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -3,24 +3,24 @@
 // The color palette
 $palette: (
 	light: (
-		1: #D8E2DC,
+		1: #e6b4b4,
 		2: #E8E8E4,
-		3: #E9EDC9
+		3: #A8DADC
 	),
 	dark: (
-		1: #433633,
-		2: #524632,
-		3: #33363A
+		1: #1D3557,
+		2: #457B9D,
+		3: #324766
 	),
 	primary: (
-		1: #CB997E,
-		2: #DDBEA9,
-		3: #A5A58D,
-		4: #B7B7A4
+		1: #E63946,
+		2: #D13440,
+		3: #BE2F3A,
+		4: #AD2B35
  	),
 	secondary: (
 		1: #DFE7FD,
-		2: #EAE4E9,
+		2: #EAE4ED,
 		3: #CDDAFD,
 		4: #D2F9EE
 	),
