--- a/src/App.css
+++ b/src/App.css
@@ -91,12 +91,12 @@ button.header-nav-toggle{
     
 }
 
-/*.img-me{
+.img-me{
     display: block;
     height: 100px;
     width: auto;
     background-image: url('/Portfolio/public/images/me.jpg');
-};*/
+};
 
 
 
